Regression(r273929) FrameState no longer gets a move constructor https://bugs.webkit.org/show_bug.cgi?id=237142

Reviewed by Darin Adler.

FrameState no longer gets an implicit move constructor since r273929 because a custom
destructor was added.

* Shared/SessionState.h:



Canonical link: https://commits.webkit.org/247749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290446 268f45cc-cd09-0410-ab3c-d52691b4dbfc